Fix edgecases